<resources>
    <string name="app_name">Biblioteca</string>


    <!--MAIN ACTIVITY-->
    <string name="btn_Login">Login</string>
    <string name="btn_Registro">Registro</string>

    <!--REGISTRO-->
    <string name="crearCuentaTXT">Crear una cuenta</string>
    <string name="nombreET">Nombres</string>
    <string name="apellidoET">Apellidos</string>
    <string name="telefonoET">Telefono</string>
    <string name="correoET">Correo electronico</string>
    <string name="contraseñaET">Contraseña</string>
    <string name="confirmarContraseñaET">Confirmar contraseña</string>
    <string name="registrarUsuario">Registrar</string>
    <string name="tengoUnaCuentaTXT">Tengo una cuenta</string>


    <!--ACTIVIDAD LOGIN-->
    <string name="iniciarSesion">Iniciar sesion</string>
    <string name="correoLogin">Correo</string>
    <string name="passLogin">Contraseña</string>
    <string name="btn_Logeo">Ingresar</string>
    <string name="usuarioNuevoTXT">¿No tienes cuenta?. Registrate</string>


    <!--ACTIVIDAD MENU PRINCIPAL-->
    <string name="btn_LibrosActivty">Libros</string>
    <string name="btn_PréstamosActivty">Préstamos</string>
    <string name="btn_AutoresActivty">Autores</string>
    <string name="btn_CategoriasActivty">Categorias</string>
    <string name="btn_EditorialesActivty">Editoriales</string>
    <string name="btn_ReseñasActivty">Reseñas</string>

    <!--MENU PRINCIPAL-->
    <string name="bienvenidoPrincipal">Bienvenido(a)</string>
    <string name="uidPrincipal">--</string>
    <string name="nombresPrincipal">--</string>
    <string name="correoPrincipal">--</string>

    <!--Menu Libros-->
    <string name="libros">Libros</string>
    <string name="btn_ActivityAgregarLibro">Agregar</string>
    <string name="btn_ActivityLeerLibro">Visualizar</string>

    <!--Agregar Libros-->
    <string name="uid_Usuario">Uid del usuario</string>
    <string name="correo_Usuario">Correo de usuario</string>
    <string name="fecha_Hora_actual">Fecha y hora actual</string>
    <string name="tituloLibroET">Titulo</string>
    <string name="autorLibroET">Autor</string>
    <string name="generoLibroET">Género</string>
    <string name="año_PublicaciónLibroET">Año de Publicación</string>
    <string name="numero_PaginasLibroET">Numero de Paginas</string>
    <string name="cantidad_DisponibleLibroET">Cantidad Disponible</string>
    <string name="btnCreateLibro">Agregar</string>


    <!--ITEM LIBRO-->
    <string name="id_Libro_Item">Id Libro</string>
    <string name="uid_Usuario_Item">Uid del usuario</string>
    <string name="correo_Usuario_Item">Correo de usuario</string>
    <string name="fecha_Hora_Registro_Item">Fecha y hora registro</string>
    <string name="tituloLibro_Item">Titulo</string>
    <string name="autorLibro_Item">Autor</string>
    <string name="generoLibro_Item">Género</string>
    <string name="año_PublicaciónLibro_Item">Año de Publicación</string>
    <string name="numero_PaginasLibro_Item">Numero de Paginas</string>
    <string name="cantidad_DisponibleLibro_Item">Cantidad Disponible</string>

    <!--CUADRO DE DIALOGO OPCIONES DE LIBRO-->
    <string name="elijaOpcionLibroTXT">Elija una opcion</string>
    <string name="cD_EliminarLibro">Eliminar</string>
    <string name="cD_ActualizarLibro">Actualizar</string>

    <!--ACTUALIZAR LIBRO-->
    <string name="id_Libro_A">Id Libro</string>
    <string name="uid_Usuario_A">Uid del usuario</string>
    <string name="correo_Usuario_A">Correo de usuario</string>
    <string name="fecha_Hora_Registro_A">Fecha y hora registro</string>
    <string name="tituloLibro_A">Titulo</string>
    <string name="autorLibro_A">Autor</string>
    <string name="generoLibro_A">Género</string>
    <string name="año_PublicaciónLibro_A">Año de Publicación</string>
    <string name="numero_PaginasLibro_A">Numero de Paginas</string>
    <string name="cantidad_DisponibleLibro_A">Cantidad Disponible</string>
    <string name="btnUpdateLibro">Actualizar</string>


    <!--MENU PRESTAMOS-->
    <string name="Prestamos">Prestamos</string>
    <string name="btn_ActivityAgregarPrestamos">Agregar</string>
    <string name="btn_ActivityLeerPrestamos">Visualizar</string>

    <!--AGREGAR PRESTAMOS -->
    <string name="uid_UsuarioPrestamos">Uid del usuario</string>
    <string name="correo_UsuarioPrestamos">Correo de usuario</string>
    <string name="fecha_Hora_actualPrestamos">Fecha y hora actual</string>
    <string name="nombreSolicitanteET">Nombre del Solicitante</string>
    <string name="libroET">Libro</string>
    <string name="fecha_PréstamoET">Fecha de Prestamo</string>
    <string name="fecha_DevoluciónET">Fecha de Devolucion</string>
    <string name="estadoPrestamoET">Estado del Prestamo</string>
    <string name="btnCreatePrestamo">Agregar</string>

    <!--ITEM PRESTAMOS-->
    <string name="id_Prestamos_Item">Id Prestamo</string>
    <string name="uid_UsuarioPrestamos_Item">Uid del usuario</string>
    <string name="correo_UsuarioPrestamos_Item">Correo de usuario</string>
    <string name="fecha_Hora_RegistroPrestamos_Item">Fecha y hora registro</string>
    <string name="nombreSolicitante_Item">Nombre del Solicitante</string>
    <string name="libro_Item">Libro</string>
    <string name="fecha_Préstamo_Item">Fecha de Prestamo</string>
    <string name="fecha_Devolución_Item">Fecha de Devolucion</string>
    <string name="estadoPrestamo_Item">Estado del Prestamo</string>

    <!--CUADRO DE DIALOGO OPCIONES DE PRESTAMO-->
    <string name="elijaOpcionPrestamoTXT">Elija una opcion</string>
    <string name="cD_EliminarPrestamo">Eliminar</string>
    <string name="cD_ActualizarPrestamo">Actualizar</string>

    <!--ACTUALIZAR LIBRO-->
    <string name="id_Prestamos_A">Id Prestamo</string>
    <string name="uid_UsuarioPrestamos_A">Uid del usuario</string>
    <string name="correo_UsuarioPrestamos_A">Correo de usuario</string>
    <string name="fecha_Hora_RegistroPrestamos_A">Fecha y hora registro</string>
    <string name="nombreSolicitante_A">Nombre del Solicitante</string>
    <string name="libro_A">Libro</string>
    <string name="fecha_Préstamo_A">Fecha de Prestamo</string>
    <string name="fecha_Devolución_A">Fecha de Devolucion</string>
    <string name="estadoPrestamo_A">Estado del Prestamo</string>


    <!--Menu Autores-->
    <string name="Autores">Autores</string>
    <string name="btn_ActivityAgregarAutor">Agregar</string>
    <string name="btn_ActivityLeerAutor">Visualizar</string>

    <!--Menu Categorias-->
    <string name="Categorias">Categorias</string>
    <string name="btn_ActivityAgregarCategorias">Agregar</string>
    <string name="btn_ActivityLeerCategorias">Visualizar</string>


    <!--Menu Editoriales-->
    <string name="Editoriales">Editoriales</string>
    <string name="btn_ActivityAgregarEditoriales">Agregar</string>
    <string name="btn_ActivityLeerEditoriales">Visualizar</string>


    <!--Menu Reseñas-->
    <string name="Reseñas">Reseñas</string>
    <string name="btn_ActivityAgregarReseñas">Agregar</string>
    <string name="btn_ActivityLeerReseñas">Visualizar</string>







    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>