<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Libros.MenuLibros">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        app:cardBackgroundColor="#21AFD3"
        app:cardUseCompatPadding="true"
        android:padding="0.2dp"
        app:cardCornerRadius="5dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/bienvenidoPrincipal"
                android:text="@string/bienvenidoPrincipal"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <ProgressBar
                android:id="@+id/progressBarDatos"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            </ProgressBar>

            <!--UID-->
            <TextView
                android:id="@+id/uidPrincipal"
                android:text="@string/uidPrincipal"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>


            <!--NOMBRES-->
            <TextView
                android:id="@+id/nombresPrincipal"
                android:text="@string/nombresPrincipal"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>


            <!--CORREO-->
            <TextView
                android:id="@+id/correoPrincipal"
                android:text="@string/correoPrincipal"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">


        <TextView
            android:text="@string/libros"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--Boton de Activty Agregar Registro Libros-->
        <Button
            android:id="@+id/btn_ActivityAgregarLibro"
            android:text="@string/btn_ActivityAgregarLibro"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

        <!--Boton de Activty de Leer Registro Libros-->
        <Button
            android:id="@+id/btn_ActivityLeerLibro"
            android:text="@string/btn_ActivityLeerLibro"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>