<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/crearCuentaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center">
        </TextView>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/nombreET"
                android:hint="@string/nombreET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/apellidoET"
                android:hint="@string/apellidoET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/telefonoET"
                android:hint="@string/telefonoET"
                android:inputType="phone"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/correoET"
                android:hint="@string/correoET"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            >

            <EditText
                android:id="@+id/contraseñaET"
                android:hint="@string/contraseñaET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            >

            <EditText
                android:id="@+id/confirmarContraseñaET"
                android:hint="@string/confirmarContraseñaET"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registrarUsuario"
            android:text="@string/registrarUsuario"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </Button>

        <TextView
            android:id="@+id/tengoUnaCuentaTXT"
            android:text="@string/tengoUnaCuentaTXT"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
        </TextView>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>