<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prestamos.AgregarPrestamo">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <!--UID DE USUARIO-->
        <TextView
            android:id="@+id/uid_UsuarioPrestamos"
            android:hint="@string/uid_UsuarioPrestamos"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>


        <!--CORREO DE USUARIO-->
        <TextView
            android:id="@+id/correo_UsuarioPrestamos"
            android:hint="@string/correo_UsuarioPrestamos"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <!--FECHA Y HORA ACTUAL DEL DISPOSITIVO-->
        <TextView
            android:id="@+id/fecha_Hora_actualPrestamos"
            android:hint="@string/fecha_Hora_actualPrestamos"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:text="@string/nombreSolicitanteET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginTop="20dp">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/nombreSolicitanteET"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:text="@string/libroET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/libroET"
                android:inputType="text"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:text="@string/fecha_PréstamoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/fecha_PréstamoET"
                android:inputType="text"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:text="@string/fecha_DevoluciónET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/fecha_DevoluciónET"
                android:inputType="text"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:text="@string/estadoPrestamoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center">
        </TextView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <EditText
                android:id="@+id/estadoPrestamoET"
                android:inputType="text"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreatePrestamo"
            android:text="@string/btnCreatePrestamo"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>